[tool.poetry]
name = "mealify"
version = "0.1.0"
description = ""
authors = ["Geoffrey Driskell <geoff.driskell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
